Objects with rotation deltas don't rotate in correct axes #89291

Closed
opened 2021-06-19 17:33:15 +02:00 by Nathan Vasil · 4 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: 84da05a8b8
This has been broken for at least a few versions, and I'm not sure that it ever worked properly.

Short description of error
When an object has a rotation delta, rotating the object in the 3D viewport occurs in a different axis than the one specified (view plane for basic r rotate, or current orientation with specified axis.)

Here's a screen shot to demonstrate more clearly:

image.png

We have three empties at the top, all with identical world space rotation, all unparented. One is an XYZ Euler rotation mode with no delta. One is an XYZ Euler with a rotation delta. One is a quaternion with a rotation delta.

We're in an orthogonal view, aligned to one axis of these empties.

On the bottom, we can see what happens when we rotate these empties 180 degrees about their individual origins (in the viewport, by 'r' '180' enter.) This rotation should occur in the view plane, and does so for the empty without any rotation deltas. For the other empties, we can see that this rotation occurred in some other axis.

From dev notes, I understand that there is a plan to rework object inverse transforms. I don't see any maniphest entries related to that, but implementation may make deltas obsolete. Might want to talk to somebody thinking about that project before putting much work into this bug.

File used to create that screenshot is attached. Easiest to see when just rotating freely, with mouse, in individual origins.

Exact steps for others to reproduce the error
#89291.blend

  • Open file
  • Press R to rotate, move mouse to rotate

Rotation is not aligned with view axis

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: `84da05a8b8` This has been broken for at least a few versions, and I'm not sure that it *ever* worked properly. **Short description of error** When an object has a rotation delta, rotating the object in the 3D viewport occurs in a different axis than the one specified (view plane for basic r rotate, or current orientation with specified axis.) Here's a screen shot to demonstrate more clearly: ![image.png](https://archive.blender.org/developer/F10181628/image.png) We have three empties at the top, all with identical world space rotation, all unparented. One is an XYZ Euler rotation mode with no delta. One is an XYZ Euler with a rotation delta. One is a quaternion with a rotation delta. We're in an orthogonal view, aligned to one axis of these empties. On the bottom, we can see what happens when we rotate these empties 180 degrees about their individual origins (in the viewport, by 'r' '180' enter.) This rotation should occur in the view plane, and does so for the empty without any rotation deltas. For the other empties, we can see that this rotation occurred in some other axis. From dev notes, I understand that there is a plan to rework object inverse transforms. I don't see any maniphest entries related to that, but implementation *may* make deltas obsolete. Might want to talk to somebody thinking about that project before putting much work into this bug. File used to create that screenshot is attached. Easiest to see when just rotating freely, with mouse, in individual origins. **Exact steps for others to reproduce the error** [#89291.blend](https://archive.blender.org/developer/F10186690/T89291.blend) - Open file - Press R to rotate, move mouse to rotate Rotation is not aligned with view axis
Author

Added subscriber: @vasiln

Added subscriber: @vasiln

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by b665ad8621

This issue was referenced by b665ad8621a0db265fd666542d26aed463025db1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-06-21 19:32:51 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89291
No description provided.