Fix T89291: Objects with rotation deltas don't rotate in correct axes

Quaternion correction was not implemented and Euler values were being
incorrectly combined.